--- a/.github/workflows/csuopen-release-polardb.yml
+++ b/.github/workflows/csuopen-release-polardb.yml
@@ -77,14 +77,14 @@ jobs:
 
           cd $dependence_path
           echo "copy依赖libssl.so.1.1和libcrypto.so.1.1"
-          if [ ! -e "/usr/lib64/libssl.so.1.1" ];then
-              cp libs/libssl.so.1.1 /usr/lib64/
+          if [ ! -e "/usr/polardb/lib/libssl.so.1.1" ];then
+              cp libs/libssl.so.1.1 /usr/polardb/lib
           fi
-          if [ ! -e "/usr/lib64/libcrypto.so.1.1" ];then
-              cp libs/libcrypto.so.1.1 /usr/lib64/
+          if [ ! -e "/usr/polardb/lib/libcrypto.so.1.1" ];then
+              cp libs/libcrypto.so.1.1 /usr/polardb/lib
           fi
-          if [ ! -e "/lib64/libxerces-c-3.1.so" ];then
-              cp libs/libxerces-c-3.1.so /lib64/libxerces-c-3.1.so
+          if [ ! -e "/usr/polardb/lib/libxerces-c-3.1.so" ];then
+              cp libs/libxerces-c-3.1.so /usr/polardb/lib/libxerces-c-3.1.so
           fi
 
 
@@ -203,14 +203,14 @@ jobs:
 
           cd $dependence_path
           echo "copy依赖libssl.so.1.1和libcrypto.so.1.1"
-          if [ ! -e "/usr/lib64/libssl.so.1.1" ];then
-              cp libs/libssl.so.1.1 /usr/lib64/
+          if [ ! -e "/usr/polardb/lib/libssl.so.1.1" ];then
+              cp libs/libssl.so.1.1 /usr/polardb/lib
           fi
-          if [ ! -e "/usr/lib64/libcrypto.so.1.1" ];then
-              cp libs/libcrypto.so.1.1 /usr/lib64/
+          if [ ! -e "/usr/polardb/lib/libcrypto.so.1.1" ];then
+              cp libs/libcrypto.so.1.1 /usr/polardb/lib
           fi
-          if [ ! -e "/lib64/libxerces-c-3.2.so" ];then
-              cp libs/libxerces-c-3.2.so /lib64/libxerces-c-3.2.so
+          if [ ! -e "/usr/polardb/lib/libxerces-c-3.1.so" ];then
+              cp libs/libxerces-c-3.1.so /usr/polardb/lib/libxerces-c-3.1.so
           fi
 
           echo "安装zlog"
@@ -328,14 +328,14 @@ jobs:
 
           cd $dependence_path
           echo "copy依赖libssl.so.1.1和libcrypto.so.1.1"
-          if [ ! -e "/usr/lib64/libssl.so.3.0.7" ];then
-              cp libs/libssl.so.3.0.7 /usr/lib64/
+          if [ ! -e "/usr/polardb/lib/libssl.so.1.1" ];then
+              cp libs/libssl.so.1.1 /usr/polardb/lib
           fi
-          if [ ! -e "/usr/lib64/libcrypto.so.3.0.7" ];then
-              cp libs/libcrypto.so.3.0.7 /usr/lib64/
+          if [ ! -e "/usr/polardb/lib/libcrypto.so.1.1" ];then
+              cp libs/libcrypto.so.1.1 /usr/polardb/lib
           fi
-          if [ ! -e "/lib64/libxerces-c-3.2.so" ];then
-              cp libs/libxerces-c-3.2.so /lib64/libxerces-c-3.2.so
+          if [ ! -e "/usr/polardb/lib/libxerces-c-3.1.so" ];then
+              cp libs/libxerces-c-3.1.so /usr/polardb/lib/libxerces-c-3.1.so
           fi
 
           echo "安装zlog"
